--- a/main.css
+++ b/main.css
@@ -23,19 +23,24 @@ main {
   min-height: 100%;
 }
 
+footer {
+  margin: 0;
+}
+
 nav,
 footer {
-  background-color: #aaa;
+  background-color: #023B34;
 }
 
 section {
-  margin: 0;
+  margin-top: 3%;
+  margin-bottom: 3%;
   padding: 0;
-  background-color: #bbb;
+  background-color: rgba(118, 184, 173, 0.589);
 }
 
 section:nth-child(even) {
-  background-color: #ddd;
+  background-color: #4BB3A1;
 }
 
 .header-text {
@@ -58,12 +63,25 @@ section:nth-child(even) {
 }
 
 .li-nav-buttons:hover {
-  background-color: #bbb;
+  background-color: black;
 }
 
 .a-nav-buttons {
   text-decoration: none;
   color: inherit;
+  width: 100%;
+  height: 100%;
+  display: inline-block;
+  color: white;
+}
+
+.a-nav-buttons-project {
+  text-decoration: none;
+  color: inherit;
+  width: 100%;
+  height: 100%;
+  display: inline-block;
+  color: black;
 }
 
 .headline {
@@ -83,13 +101,14 @@ section:nth-child(even) {
 .headline-text {
   padding: 2% 2%;
   margin: 0;
+  font-weight: normal
 }
 
 .about-me-and-projects {
   flex: 1;
   display: grid;
   grid-template-columns: 50% 50%;
-  height: 100%;
+  text-align: left;
 }
 
 .about-me-link {
@@ -103,7 +122,6 @@ section:nth-child(even) {
   border-right-style: solid;
   border-color: black;
   padding: 5% 5%;
-  height: 100%;
 }
 
 .projects-link {
@@ -117,7 +135,10 @@ section:nth-child(even) {
   border-left-style: solid;
   border-color: black;
   padding: 5% 5%;
-  height: 100%;
+}
+
+.about-me-link, .projects-link {
+  color: black;
 }
 
 .about-me-header {
@@ -125,6 +146,7 @@ section:nth-child(even) {
   float: left;
   margin: 0;
   padding: 2.5% 0 0 2.5%;
+  color: white
 }
 
 .about-me-text {
@@ -164,10 +186,18 @@ section:nth-child(even) {
   display: flex;
   justify-content: space-evenly;
   list-style-type: none;
-  margin: 0;
   padding: 0;
   clear: left;
 }
+
+.contact-me-ul-top {
+  margin: 5px 0 5px 0;
+}
+
+.contact-me-ul-bottom {
+  margin: 5px 0 0 0;
+}
+
 
 .footer-h6 {
   font-size: 15px;
@@ -195,11 +225,12 @@ section:nth-child(even) {
 .li-view-code, .li-view-app {
   border-style: solid;
   border-width: 1px;
-  width: 33.33%;
+  width: 40%;
 }
 
-.li-view-code:hover, .li-view-app:hover {
-  background-color: white;
+.li-view-code:hover, .li-view-app:hover, .a-nav-buttons-project:hover {
+  background-color: black;
+  color: white;
 }
 
 .technologies {
@@ -209,10 +240,68 @@ section:nth-child(even) {
 
 .devicon {
   font-size: 200%;
+  color: black;
 }
 
 .project-title {
   margin: 0;
   padding: 0;
   font-size: 1.2em;
+}
+
+.social-link {
+  text-decoration: none;
+}
+
+.projects {
+  margin-top: 3%;
+  margin-bottom: 3%;
+}
+
+.project-desc {
+  padding: 3%;
+}
+
+.fab, .far {
+  color: white;
+}
+
+@media screen and (min-width: 650px) {
+  body {
+    max-width: 650px;
+    margin-left: 10%;
+    margin-right: 10%;
+  }
+
+  .about-me-text, .headline-text, .about-me-link, .projects-link {
+    font-size: 22px;
+  }
+  
+  .about-me-header {
+    font-size: 19px;
+  }
+
+  .currently-ul {
+    font-size: 18px;
+  }
+
+  .currently-text, .currently-response {
+    font-size: 20px;
+  }
+
+  .fab, .far {
+    font-size: 2rem;
+  }
+
+  .project-title {
+    font-size: 28px;
+  }
+}
+
+@media screen and (min-width: 1000px) {
+  body {
+    max-width: 1000px;
+    margin-left: 16%;
+    margin-right: 16%;
+  }
 }
