--- a/main.css
+++ b/main.css
@@ -8,7 +8,7 @@ html {
 }
 
 body {
-  font-family: "Open Sans", sans-serif; 
+  font-family: 'Merriweather', serif; 
   font-size: 20px;
   color: #444;
   text-align: center;
@@ -21,6 +21,7 @@ main {
   flex-direction: column;
   align-items: stretch;
   min-height: 100%;
+  width: 100%;
 }
 
 footer {
